--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -95,7 +95,6 @@ body, input, select, textarea {
   font-size: 15pt;
   font-weight: 400;
   letter-spacing: 0.075em;
-  line-height: 1.65em;
 }
 @media screen and (max-width: 1680px) {
   body, input, select, textarea {
@@ -1844,7 +1843,6 @@ ul.icons.major li {
 }
 
 table {
-  margin: 0 0 6rem 0;
   width: 100%;
 }
 table tbody tr {
@@ -2109,6 +2107,7 @@ button,
   display: -moz-flex;
   display: -ms-flex;
   display: flex;
+  padding-bottom: 1em;
 }
 .spotlight .image {
   -moz-order: 2;
@@ -2144,9 +2143,11 @@ button,
       -ms-hyphens: auto;
           hyphens: auto;
   text-align: justify;
+  line-height: 1.5;
 }
 .spotlight .content td {
   text-align: center;
+  padding-bottom: 0.3em;
 }
 .spotlight:nth-child(2n) {
   -moz-flex-direction: row-reverse;
@@ -3296,6 +3297,9 @@ body.is-touch .tiles article .content {
   }
 }
 
+.shows {
+  padding-bottom: 5em;
+}
 .shows table {
   width: 80%;
   border: none;
@@ -3312,6 +3316,10 @@ body.is-touch .tiles article .content {
 .shows tr {
   text-align: center;
   border: 1px solid rgba(188, 188, 188, 0.25);
+}
+.shows td {
+  padding: 0.5em;
+  font-weight: bold;
 }
 .shows td.text-right {
   text-align: right;
