--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3140,35 +3140,37 @@ body.landing #footer {
   display: block;
   width: 100%;
 }
-.tiles article > .image:before {
-  pointer-events: none;
-  transition: background-color 0.5s ease, opacity 0.5s ease;
-  content: "";
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  opacity: 1;
-  z-index: 1;
-  opacity: 0.8;
-}
-.tiles article > .image:after {
-  pointer-events: none;
-  transition: opacity 0.5s ease;
-  content: "";
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-  opacity: 0.25;
-  z-index: 2;
+@media (min-width: 1281px) {
+  .tiles article > .image:before {
+    pointer-events: none;
+    transition: background-color 0.5s ease, opacity 0.5s ease;
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 1;
+    z-index: 1;
+    opacity: 0.8;
+  }
+  .tiles article > .image:after {
+    pointer-events: none;
+    transition: opacity 0.5s ease;
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    opacity: 0.25;
+    z-index: 2;
+  }
 }
 .tiles article > a {
   display: -moz-flex;
