--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -2101,39 +2101,42 @@
 				width: 100%;
 			}
 
-			&:before {
-				@include vendor('pointer-events', 'none');
-				@include vendor('transition', (
-					'background-color #{$duration} #{$ease}',
-					'opacity #{$duration} #{$ease}'
-				));
-				content: '';
-				display: block;
-				position: absolute;
-				top: 0;
-				left: 0;
-				width: 100%;
-				height: 100%;
-				opacity: 1.0;
-				z-index: 1;
-				opacity: 0.8;
-			}
+			@media (min-width:1281px) {
 
-			&:after {
-				@include vendor('pointer-events', 'none');
-				@include vendor('transition', 'opacity #{$duration} #{$ease}');
-				content: '';
-				display: block;
-				position: absolute;
-				top: 0;
-				left: 0;
-				width: 100%;
-				height: 100%;
-				background-position: center;
-				background-repeat: no-repeat;
-				background-size: 100% 100%;
-				opacity: 0.25;
-				z-index: 2;
+				&:before {
+					@include vendor('pointer-events', 'none');
+					@include vendor('transition', (
+						'background-color #{$duration} #{$ease}',
+						'opacity #{$duration} #{$ease}'
+					));
+					content: '';
+					display: block;
+					position: absolute;
+					top: 0;
+					left: 0;
+					width: 100%;
+					height: 100%;
+					opacity: 1.0;
+					z-index: 1;
+					opacity: 0.8;
+				}
+
+				&:after {
+					@include vendor('pointer-events', 'none');
+					@include vendor('transition', 'opacity #{$duration} #{$ease}');
+					content: '';
+					display: block;
+					position: absolute;
+					top: 0;
+					left: 0;
+					width: 100%;
+					height: 100%;
+					background-position: center;
+					background-repeat: no-repeat;
+					background-size: 100% 100%;
+					opacity: 0.25;
+					z-index: 2;
+				}
 			}
 		}
 
