--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3140,37 +3140,35 @@ body.landing #footer {
   display: block;
   width: 100%;
 }
-@media (hover: none) {
-  .tiles article > .image:before {
-    pointer-events: none;
-    transition: background-color 0.5s ease, opacity 0.5s ease;
-    content: "";
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    opacity: 1;
-    z-index: 1;
-    opacity: 0.8;
-  }
-  .tiles article > .image:after {
-    pointer-events: none;
-    transition: opacity 0.5s ease;
-    content: "";
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    opacity: 0.25;
-    z-index: 2;
-  }
+.tiles article > .image:before {
+  pointer-events: none;
+  transition: background-color 0.5s ease, opacity 0.5s ease;
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 1;
+  z-index: 1;
+  opacity: 0.8;
+}
+.tiles article > .image:after {
+  pointer-events: none;
+  transition: opacity 0.5s ease;
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  opacity: 0.25;
+  z-index: 2;
 }
 .tiles article > a {
   display: -moz-flex;
@@ -3238,18 +3236,20 @@ body.landing #footer {
 .tiles article.style6 > .image:before {
   background-color: #ed4933;
 }
-body:not(.is-touch) .tiles article:hover > .image {
-  transform: scale(1.1);
-}
-body:not(.is-touch) .tiles article:hover > .image:before {
-  opacity: 0.35;
-}
-body:not(.is-touch) .tiles article:hover > .image:after {
-  opacity: 0;
-}
-body:not(.is-touch) .tiles article:hover .content {
-  max-height: 15em;
-  opacity: 1;
+@media only screen and (min-width: 992px) {
+  body:not(.is-touch) .tiles article:hover > .image {
+    transform: scale(1.1);
+  }
+  body:not(.is-touch) .tiles article:hover > .image:before {
+    opacity: 0.35;
+  }
+  body:not(.is-touch) .tiles article:hover > .image:after {
+    opacity: 0;
+  }
+  body:not(.is-touch) .tiles article:hover .content {
+    max-height: 15em;
+    opacity: 1;
+  }
 }
 body.is-preload .tiles article {
   transform: scale(0.9);
