--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2121,11 +2121,12 @@ button,
   width: auto;
   height: auto;
   max-height: 90vh;
-  max-width: 100vw;
+  max-width: 50vw;
 }
-@media only screen and (max-width: 820px) {
+@media only screen and (max-width: 900px) {
   .spotlight .image img {
     max-height: none;
+    max-width: 100vw;
   }
 }
 .spotlight .content {
@@ -2188,7 +2189,7 @@ button,
     width: 45%;
   }
   .spotlight .content {
-    width: 55%;
+    width: 45%;
   }
 }
 @media screen and (max-width: 980px) {
@@ -3424,8 +3425,7 @@ body.is-touch .tiles article .content {
   transform: translateZ(0) scale(1);
   -webkit-backface-visibility: hidden;
           backface-visibility: hidden;
-  transform-origin: 0 0;
-  /* see note above */
+  transform-origin: 0 0; /* see note above */
 }
 #spinner .ldio-se93k9o5zk div {
   box-sizing: content-box;
