--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2915,7 +2915,7 @@ body.is-preload #banner:after {
   margin-bottom: 1rem;
   font-size: 44px;
   font-family: "Berlin Sans FB", sans-serif;
-  color: #68c1ec;
+  color: #b29e79;
   font-weight: 500;
 }
 @media only screen and (max-width: 600px) {
@@ -2925,7 +2925,7 @@ body.is-preload #banner:after {
   }
 }
 #video div.content .button {
-  color: #68c1ec;
+  color: #b29e79;
   box-shadow: none;
 }
 
