--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1841,7 +1841,7 @@
 			margin-bottom: 1rem;
 			font-size: 44px;		
 			font-family: 'Berlin Sans FB', sans-serif;
-			color: #68c1ec;
+			color: #b29e79;
 			font-weight: 500;
 		}
 
@@ -1856,7 +1856,7 @@
 		
 
 		.button {
-			color: #68c1ec;
+			color: #b29e79;
 			box-shadow: none;
 		}
 
