--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -7,6 +7,8 @@
 @import 'fontawesome-all.min.css';
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,600,600italic,800,800italic');
 @import url('https://fonts.cdnfonts.com/css/berlin-sans-fb');
+@import url('https://fonts.cdnfonts.com/css/heavy-heap');
+
 
 
 
@@ -1700,12 +1702,12 @@
 		div p {
 			margin: 6rem 0 0 0;
 			font-size: 34px;		
-			font-family: 'Berlin Sans FB', sans-serif;
+			font-family: 'Heavy Heap', sans-serif;
 
 			@media only screen and (max-width: 600px) {
 				margin: 6rem 0 0 0;
 				font-size: 24px;		
-				font-family: 'Berlin Sans FB', sans-serif;
+				font-family: 'Heavy Heap', sans-serif;
 			
 			}
 		}
@@ -1840,7 +1842,7 @@
 		p {
 			margin-bottom: 1rem;
 			font-size: 44px;		
-			font-family: 'Berlin Sans FB', sans-serif;
+			font-family: 'Heavy Heap', sans-serif;
 			color: #b29e79;
 			font-weight: 500;
 		}
@@ -1919,7 +1921,7 @@
 	#main {
 		> header {
 			@include padding(12em, 0);
-			background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,0.5)), to(rgba(0,0,0,0.5))), url("../../images/ntts/background.JPEG");
+			background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,0.5)), to(rgba(0,0,0,0.5))), url("../../images/mary/background.png");
 			background-attachment: fixed;
 			background-position: center center;
 			background-repeat: no-repeat;
@@ -2056,7 +2058,7 @@
 
 	body.landing {
 		#page-wrapper {
-			background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,0.5)), to(rgba(0,0,0,0.5))), url("../../images/ntts/background.JPEG");
+			background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,0.5)), to(rgba(0,0,0,0.5))), url("../../images/mary/background.png");
 			background-attachment: fixed;
 			background-position: center center;
 			background-repeat: no-repeat;
