--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -2069,11 +2069,11 @@
 		
 	@media only screen and (max-width: 320px) {
 		/* Small screen, non-retina */
-		#page-wrapper { background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,0.5)), to(rgba(0,0,0,0.5))), url("../../images/ntts/background_290.png"); }
+		#page-wrapper { background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,0.5)), to(rgba(0,0,0,0.5))), url("../../images/mary/background.png"); }
 	}
 	@media only screen and (min-width: 321px) and (max-width: 540px) {
 		/* Medium screen, non-retina */
-		#page-wrapper { background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,0.5)), to(rgba(0,0,0,0.5))), url("../../images/ntts/background_540.png"); }
+		#page-wrapper { background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,0.5)), to(rgba(0,0,0,0.5))), url("../../images/mary/background.png"); }
 	}
 
 		#footer {
