finish chameleon release

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,6 +2,7 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,600,600italic,800,800italic");
 @import url("https://fonts.cdnfonts.com/css/berlin-sans-fb");
 @import url("https://fonts.cdnfonts.com/css/heavy-heap");
+@import url(https://db.onlinewebfonts.com/c/19379417f31c9f6fa8962bc7517692b7?family=HWT+Arabesque+W00+Regular);
 /*
 	Spectral by HTML5 UP
 	html5up.net | @ajlkn
@@ -2788,13 +2789,13 @@ body.is-menu-visible #menu {
 #banner div p {
   margin: 6rem 0 0 0;
   font-size: 34px;
-  font-family: "Heavy Heap", sans-serif;
+  font-family: "HWT Arabesque W00 Regular", sans-serif;
 }
 @media only screen and (max-width: 600px) {
   #banner div p {
     margin: 6rem 0 0 0;
     font-size: 24px;
-    font-family: "Heavy Heap", sans-serif;
+    font-family: "HWT Arabesque W00 Regular", sans-serif;
   }
 }
 #banner div a {
@@ -2978,7 +2979,7 @@ body.is-preload #banner:after {
 /* Main */
 #main > header {
   padding: 12em 0 max(0.1rem, 12em - 6rem + 0) 0;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("../../images/mary/background.png");
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))), url("../../images/chameleon/background.png");
   background-attachment: fixed;
   background-position: center center;
   background-repeat: no-repeat;
@@ -3098,7 +3099,7 @@ body.is-mobile #main > header {
 }
 /* Landing */
 body.landing #page-wrapper {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("../../images/mary/background.png");
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))), url("../../images/chameleon/background.png");
   background-attachment: fixed;
   background-position: center center;
   background-repeat: no-repeat;
@@ -3110,7 +3111,7 @@ body.landing #page-wrapper {
     /* Small screen, non-retina */
   }
   body.landing #page-wrapper {
-    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("../../images/mary/background.png");
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))), url("../../images/chameleon/background.png");
   }
 }
 @media only screen and (min-width: 321px) and (max-width: 540px) {
@@ -3118,7 +3119,7 @@ body.landing #page-wrapper {
     /* Medium screen, non-retina */
   }
   body.landing #page-wrapper {
-    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("../../images/mary/background.png");
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))), url("../../images/chameleon/background.png");
   }
 }
 body.landing #footer {
@@ -3458,12 +3459,12 @@ body.is-touch .tiles article .content {
   }
 }
 #landing p {
-  color: #e19495;
+  color: #9e1914;
 }
 
 #landing .button {
-  color: #e19495;
-  box-shadow: inset 0 0 0 2px #e19495;
+  color: #9e1914;
+  box-shadow: inset 0 0 0 2px #9e1914;
 }
 
 .more::after {
