--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -8,6 +8,7 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,600,600italic,800,800italic');
 @import url('https://fonts.cdnfonts.com/css/berlin-sans-fb');
 @import url('https://fonts.cdnfonts.com/css/heavy-heap');
+@import url(https://db.onlinewebfonts.com/c/19379417f31c9f6fa8962bc7517692b7?family=HWT+Arabesque+W00+Regular);
 
 
 
@@ -1702,12 +1703,12 @@
 		div p {
 			margin: 6rem 0 0 0;
 			font-size: 34px;		
-			font-family: 'Heavy Heap', sans-serif;
+			font-family: 'HWT Arabesque W00 Regular', sans-serif;
 
 			@media only screen and (max-width: 600px) {
 				margin: 6rem 0 0 0;
 				font-size: 24px;		
-				font-family: 'Heavy Heap', sans-serif;
+				font-family: 'HWT Arabesque W00 Regular', sans-serif;
 			
 			}
 		}
@@ -1921,7 +1922,7 @@
 	#main {
 		> header {
 			@include padding(12em, 0);
-			background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,0.5)), to(rgba(0,0,0,0.5))), url("../../images/mary/background.png");
+			background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,0.7)), to(rgba(0,0,0,0.7))), url("../../images/chameleon/background.png");
 			background-attachment: fixed;
 			background-position: center center;
 			background-repeat: no-repeat;
@@ -2058,7 +2059,7 @@
 
 	body.landing {
 		#page-wrapper {
-			background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,0.5)), to(rgba(0,0,0,0.5))), url("../../images/mary/background.png");
+			background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,0.7)), to(rgba(0,0,0,0.7))), url("../../images/chameleon/background.png");
 			background-attachment: fixed;
 			background-position: center center;
 			background-repeat: no-repeat;
@@ -2069,11 +2070,11 @@
 		
 	@media only screen and (max-width: 320px) {
 		/* Small screen, non-retina */
-		#page-wrapper { background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,0.5)), to(rgba(0,0,0,0.5))), url("../../images/mary/background.png"); }
+		#page-wrapper { background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,0.7)), to(rgba(0,0,0,0.7))), url("../../images/chameleon/background.png"); }
 	}
 	@media only screen and (min-width: 321px) and (max-width: 540px) {
 		/* Medium screen, non-retina */
-		#page-wrapper { background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,0.5)), to(rgba(0,0,0,0.5))), url("../../images/mary/background.png"); }
+		#page-wrapper { background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,0.7)), to(rgba(0,0,0,0.7))), url("../../images/chameleon/background.png"); }
 	}
 
 		#footer {
@@ -2610,13 +2611,13 @@
 }
 
 #landing p {
-	color: #e19495;
+	color: #9e1914;
 
 }
 
 #landing .button {
-	color: #e19495;
-	box-shadow: inset 0 0 0 2px #e19495;
+	color: #9e1914;
+	box-shadow: inset 0 0 0 2px #9e1914;
 
 }
 
