--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,6 +3,7 @@
 @import url("https://fonts.cdnfonts.com/css/berlin-sans-fb");
 @import url("https://fonts.cdnfonts.com/css/heavy-heap");
 @import url(https://db.onlinewebfonts.com/c/19379417f31c9f6fa8962bc7517692b7?family=HWT+Arabesque+W00+Regular);
+@import url("https://fonts.cdnfonts.com/css/fathers");
 /*
 	Spectral by HTML5 UP
 	html5up.net | @ajlkn
@@ -2789,13 +2790,13 @@ body.is-menu-visible #menu {
 #banner div p {
   margin: 6rem 0 0 0;
   font-size: 34px;
-  font-family: "HWT Arabesque W00 Regular", sans-serif;
+  font-family: "fathers", sans-serif;
 }
 @media only screen and (max-width: 600px) {
   #banner div p {
     margin: 6rem 0 0 0;
     font-size: 24px;
-    font-family: "HWT Arabesque W00 Regular", sans-serif;
+    font-family: "fathers", sans-serif;
   }
 }
 #banner div a {
