--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,6 +4,7 @@
 @import url("https://fonts.cdnfonts.com/css/heavy-heap");
 @import url(https://db.onlinewebfonts.com/c/19379417f31c9f6fa8962bc7517692b7?family=HWT+Arabesque+W00+Regular);
 @import url("https://fonts.cdnfonts.com/css/fathers");
+@import url(https://db.onlinewebfonts.com/c/f7d34c9e4c3102c89048d775c27a78f3?family=The+Seasons+Bold); 
 /*
 	Spectral by HTML5 UP
 	html5up.net | @ajlkn
@@ -2790,13 +2791,13 @@ body.is-menu-visible #menu {
 #banner div p {
   margin: 6rem 0 0 0;
   font-size: 34px;
-  font-family: "fathers", sans-serif;
+  font-family: "The+Seasons+Bold", sans-serif;
 }
 @media only screen and (max-width: 600px) {
   #banner div p {
     margin: 6rem 0 0 0;
     font-size: 24px;
-    font-family: "fathers", sans-serif;
+    font-family: "The+Seasons+Bold", sans-serif;
   }
 }
 #banner div a {
