--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2791,7 +2791,7 @@ body.is-menu-visible #menu {
 #banner div p {
   margin: 6rem 0 0 0;
   font-size: 34px;
-  font-family: "fathers";
+  font-family: "Berlin Sans FB", sans-serif;
 }
 @media only screen and (max-width: 600px) {
   #banner div p {
