--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2797,7 +2797,7 @@ body.is-menu-visible #menu {
   #banner div p {
     margin: 6rem 0 0 0;
     font-size: 24px;
-    font-family: "fathers";
+    font-family: "Berlin Sans FB", sans-serif;
   }
 }
 #banner div a {
