--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2918,8 +2918,8 @@ body.is-preload #banner:after {
 #video div.content p {
   margin-bottom: 1rem;
   font-size: 44px;
-  font-family: "Berlin Sans FB", sans-serif;
-  color: #b29e79;
+  font-family: "The Seasons Bold";
+  color: #FFFFFF;
   font-weight: 500;
 }
 @media only screen and (max-width: 600px) {
