--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2929,7 +2929,7 @@ body.is-preload #banner:after {
   }
 }
 #video div.content .button {
-  color: #b29e79;
+  color: #FFFFFF;
   box-shadow: none;
 }
 
