--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -164,7 +164,7 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 h2 {
   font-size: 1.35em;
   line-height: 1.75em;
-  color: #b29e79;
+  color: #FFFFFF;
 }
 @media screen and (max-width: 736px) {
   h2 {
