--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,6 +5,7 @@
 @import url(https://db.onlinewebfonts.com/c/19379417f31c9f6fa8962bc7517692b7?family=HWT+Arabesque+W00+Regular);
 @import url("https://fonts.cdnfonts.com/css/fathers");
 @import url(https://db.onlinewebfonts.com/c/f7d34c9e4c3102c89048d775c27a78f3?family=The+Seasons+Bold); 
+@import url(https://db.onlinewebfonts.com/c/21c620917dd799ec99558503416404ef?family=Grand+Casino); 
 /*
 	Spectral by HTML5 UP
 	html5up.net | @ajlkn
@@ -2791,7 +2792,7 @@ body.is-menu-visible #menu {
 #banner div p {
   margin: 6rem 0 0 0;
   font-size: 34px;
-  font-family: "The Seasons Bold";
+  font-family: "Grand Casino";
 }
 @media only screen and (max-width: 600px) {
   #banner div p {
