--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2798,7 +2798,7 @@ body.is-menu-visible #menu {
   #banner div p {
     margin: 6rem 0 0 0;
     font-size: 24px;
-    font-family: "The Seasons Bold";
+    font-family: "Grand Casino";
   }
 }
 #banner div a {
